2017-11-04  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Prevent multiple execution.

	* tryXpath/scripts/try_xpath_functions.js:
	Prevent multiple execution.

2017-11-03  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Define execScript function.
	Modify sendToActiveTab function.


	* tryXpath/manifest.json: 
	Change "content_scripts".

	* tryXpath/scripts/try_xpath_manage_content.js:
	Create this file.
	Define state variable.
	Define genericListener.listeners.loadContentState function.
	Define genericListener.listeners.finishScriptExecuteAll function.

2017-11-02  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_functions.js:
	Define createDetailRow function.

	* tryXpath/background/try_xpath_background.js:
	Modify loadDefaultCss function.

	* tryXpath/pages/options.js:
	Modify loadDefaultCss function.

	* tryXpath/pages/options.html:
	Add a script element.

2017-11-01  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_functions.js:
	Define onError function.

	* tryXpath/popup/popup.html (Details):
	Remove caption elements.
	Add h2 elements.

	* tryXpath/popup/popup.js:
	Define showDetailsPage function.
	Remove variables. prevDetailsPage, moveDetailsPage, nextDetailsPage.
	Set handlers which manage the details page.

	* tryXpath/scripts/try_xpath_functions.js:
	Define updateDetailsTable function.

	* tryXpath/popup/popup.js:
	Define prevDetailsPage, moveDetailsPage, detailsPageCount
	and nextDetailsPage variables.
	Rename. pageSize -> detailsPageSize
	Rename. pageIndex -> detailsPageIndex

	* tryXpath/popup/popup.html (Results):
	Add some elements.

2017-10-31  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js: 
	Fix the id value. results-detals -> results-details
	Define pageSize constans.
	Define pageIndex variable.

	* tryXpath/popup/popup.html (Results):
	Fix the id value. results-detals -> results-details

	* tryXpath/popup/popup.js: