@@ -34,10 +34,6 @@
     ],
 
     "content_scripts": [
-        {
-            "matches": ["<all_urls>"],
-            "js": ["scripts/try_xpath_manage_content.js"]
-        }
     ],
 
     "options_ui": {
